Imports fonts and starts button component

--- a/app/globals.css
+++ b/app/globals.css
@@ -16,7 +16,12 @@
   }
 }
 
-body {
+button {
+  font-family: var(--font-lato);
+  text-transform: uppercase;
+}
+
+/* body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
@@ -25,3 +30,4 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+ */
