--- a/stories/button.css
+++ b/stories/button.css
@@ -1,20 +1,34 @@
 .storybook-button {
-  font-family: var(--font-lato), Arial, sans-serif;
+  font-family: "var(--font-lato)", sans-serif;
+  letter-spacing: 0.08125rem;
+  line-height: normal;
   cursor: pointer;
   font-size: 0.8125rem;
-  font-weight: 700;
-  display: inline-block;
-  line-height: 1;
+  font-weight: 400;
+  height: 3.75rem;
 }
 .storybook-button--primary {
   color: #ffffff;
   background-color: #000000;
-  padding: 1.4375rem 0rem 1.3125rem 0rem;
 }
+
+.storybook-button--primary:hover {
+  color: #000000;
+  background-color: #ffffff;
+  transition: 0.3s all ease-in;
+  border: 0.0625rem solid #000000;
+}
+
 .storybook-button--secondary {
   color: #000;
   border: 0.0625rem solid #000000;
-  padding: 1.5625rem 2.1875rem;
+}
+
+.storybook-button--special {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 2.2rem;
 }
 .storybook-button--small {
   width: 15rem;
