Starts to refactor styles and structure, installs Zod and react-hook-form

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,8 +6,8 @@ button {
   font-family: "var(--font-lato)", sans-serif;
   text-transform: uppercase;
   font-size: 0.8125rem;
-  font-weight: 400;
   letter-spacing: 0.08125rem;
   line-height: normal;
   cursor: pointer;
+  height: 3.75rem;
 }
