Changes styles and refactors

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,8 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  font-family: "var(--font-ptSerif), sans-serif" !important;
+html {
+  font-family: "var(--font-pt_serif)", sans-serif;
 }
 
 button {
