--- a/app/globals.css
+++ b/app/globals.css
@@ -7,7 +7,7 @@
 }
 
 html {
-  font-family: "var(--font-pt_serif)", sans-serif;
+  font-family: "var(--font-pt_serif)", serif;
 }
 
 button {
@@ -18,4 +18,11 @@ button {
   line-height: normal;
   cursor: pointer;
   height: 3.75rem;
+}
+
+.heading-2 {
+  font-family: "var(--font-pt_serif)", serif;
+  font-size: clamp(2.5rem, 2rem + 2.5vw, 6rem);
+  line-height: 1.1;
+  margin-bottom: 1.1rem;
 }
