--- a/stories/header.css
+++ b/stories/header.css
@@ -1,4 +1,4 @@
-.storybook-header {
+/* .storybook-header {
   font-family: 'Nunito Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   padding: 15px 20px;
@@ -30,3 +30,4 @@
   font-size: 14px;
   margin-right: 10px;
 }
+ */
