--- a/app/globals.css
+++ b/app/globals.css
@@ -11,20 +11,55 @@
 } */
 
 @layer base {
-  input[type="radio"] {
-    @apply appearance-none;
-    background-color: #ffffff;
-    margin: 0;
-    font: inherit;
-    color: #000;
-    width: 1.15em;
-    height: 1.15em;
-    border: 0.15em solid #000;
+  .radio-group {
+    display: flex !important;
+  }
+
+  .radio-group-item {
+    @apply border;
+    @apply border-platinum;
+    width: 3rem;
+    height: 3rem;
+    border-radius: 100%;
+  }
+
+  .radio-group-item:focus {
+    @apply border;
+    @apply border-platinum;
+  }
+
+  .radio-group-indicator {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    position: relative;
+  }
+
+  .radio-group-indicator::after {
+    content: "";
+    display: none;
+    width: 3rem;
+    height: 3rem;
     border-radius: 50%;
+    @apply bg-whiteChocolate;
+  }
+
+  .radio-button-indicator.selected {
+ @apply bg-whiteChocolate;
+}
+
+  .radio-group-indicator[data-state="checked"]::after {
+    display: block;
+  }
+
+  span[data-state="checked"] {
+    display: none;
   }
 }
 
-input[type="radio"]::before {
+/* input[type="radio"]::before {
   content: "";
   width: 0.65em;
   height: 0.65em;
@@ -36,7 +71,7 @@ input[type="radio"]::before {
 
 input[type="radio"]:checked::before {
   transform: scale(1);
-}
+} */
 
 .input-style {
   padding: 0.8125rem 1.3125rem;
